OrkaParser.py
# Generated from Orka.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OrkaParser ( Parser ):

    grammarFileName = "Orka.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'var'", "':'", "';'", "','", 
                     "'integer'", "'real'", "'boolean'", "'begin'", "'end'", 
                     "'read('", "')'", "'write('", "'true'", "'false'", 
                     "'.'", "'+'", "'-'", "':='", "'*'", "'/'", "'^'", "'('", 
                     "'or'", "'and'", "'not'", "'if'", "'then'", "'else'", 
                     "'while'", "'do'", "'for'", "'to'", "'downto'", "'case'", 
                     "'of'", "'default'", "'='", "'<='", "'<'", "'>'", "'>='", 
                     "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Ident", "Numb", "WS", "Comment" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_declarlist = 2
    RULE_identlist = 3
    RULE_type = 4
    RULE_runsection = 5
    RULE_actionsequence = 6
    RULE_command = 7
    RULE_input = 8
    RULE_output = 9
    RULE_const = 10
    RULE_boolconst = 11
    RULE_intnumb = 12
    RULE_realnumb = 13
    RULE_sign = 14
    RULE_assign = 15
    RULE_expression = 16
    RULE_arithmexpr = 17
    RULE_term = 18
    RULE_factor = 19
    RULE_base = 20
    RULE_boolexpr = 21
    RULE_logicalexpr = 22
    RULE_logicalterm = 23
    RULE_logicalmultiplier = 24
    RULE_logicalrel = 25
    RULE_ifstatement = 26
    RULE_doblock = 27
    RULE_whilestatement = 28
    RULE_forstatement = 29
    RULE_switchstatement = 30
    RULE_caselist = 31
    RULE_relop = 32

    ruleNames =  [ "program", "decl", "declarlist", "identlist", "type", 
                   "runsection", "actionsequence", "command", "input", "output", 
                   "const", "boolconst", "intnumb", "realnumb", "sign", 
                   "assign", "expression", "arithmexpr", "term", "factor", 
                   "base", "boolexpr", "logicalexpr", "logicalterm", "logicalmultiplier", 
                   "logicalrel", "ifstatement", "doblock", "whilestatement", 
                   "forstatement", "switchstatement", "caselist", "relop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    Ident=44
    Numb=45
    WS=46
    Comment=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(OrkaParser.Ident, 0)

        def decl(self):
            return self.getTypedRuleContext(OrkaParser.DeclContext,0)


        def runsection(self):
            return self.getTypedRuleContext(OrkaParser.RunsectionContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = OrkaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(OrkaParser.T__0)
            self.state = 67
            self.match(OrkaParser.Ident)
            self.state = 68
            self.decl()
            self.state = 69
            self.runsection()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarlist(self):
            return self.getTypedRuleContext(OrkaParser.DeclarlistContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = OrkaParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(OrkaParser.T__1)
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 72
                self.declarlist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrkaParser.IdentlistContext)
            else:
                return self.getTypedRuleContext(OrkaParser.IdentlistContext,i)


        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrkaParser.TypeContext)
            else:
                return self.getTypedRuleContext(OrkaParser.TypeContext,i)


        def getRuleIndex(self):
            return OrkaParser.RULE_declarlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarlist" ):
                listener.enterDeclarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarlist" ):
                listener.exitDeclarlist(self)




    def declarlist(self):

        localctx = OrkaParser.DeclarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 75
                self.identlist()
                self.state = 76
                self.match(OrkaParser.T__2)

                self.state = 77
                self.type_()
                self.state = 78
                self.match(OrkaParser.T__3)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self, i:int=None):
            if i is None:
                return self.getTokens(OrkaParser.Ident)
            else:
                return self.getToken(OrkaParser.Ident, i)

        def getRuleIndex(self):
            return OrkaParser.RULE_identlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentlist" ):
                listener.enterIdentlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentlist" ):
                listener.exitIdentlist(self)




    def identlist(self):

        localctx = OrkaParser.IdentlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_identlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(OrkaParser.Ident)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 86
                self.match(OrkaParser.T__4)
                self.state = 87
                self.match(OrkaParser.Ident)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OrkaParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = OrkaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RunsectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def actionsequence(self):
            return self.getTypedRuleContext(OrkaParser.ActionsequenceContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_runsection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRunsection" ):
                listener.enterRunsection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRunsection" ):
                listener.exitRunsection(self)




    def runsection(self):

        localctx = OrkaParser.RunsectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_runsection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(OrkaParser.T__8)
            self.state = 96
            self.actionsequence()
            self.state = 97
            self.match(OrkaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionsequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrkaParser.CommandContext)
            else:
                return self.getTypedRuleContext(OrkaParser.CommandContext,i)


        def getRuleIndex(self):
            return OrkaParser.RULE_actionsequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionsequence" ):
                listener.enterActionsequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionsequence" ):
                listener.exitActionsequence(self)




    def actionsequence(self):

        localctx = OrkaParser.ActionsequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_actionsequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17632048719872) != 0):
                self.state = 99
                self.command()
                self.state = 100
                self.match(OrkaParser.T__3)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_(self):
            return self.getTypedRuleContext(OrkaParser.InputContext,0)


        def output(self):
            return self.getTypedRuleContext(OrkaParser.OutputContext,0)


        def assign(self):
            return self.getTypedRuleContext(OrkaParser.AssignContext,0)


        def ifstatement(self):
            return self.getTypedRuleContext(OrkaParser.IfstatementContext,0)


        def switchstatement(self):
            return self.getTypedRuleContext(OrkaParser.SwitchstatementContext,0)


        def whilestatement(self):
            return self.getTypedRuleContext(OrkaParser.WhilestatementContext,0)


        def forstatement(self):
            return self.getTypedRuleContext(OrkaParser.ForstatementContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = OrkaParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_command)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.input_()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.output()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.assign()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 4)
                self.state = 110
                self.ifstatement()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 5)
                self.state = 111
                self.switchstatement()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 6)
                self.state = 112
                self.whilestatement()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 7)
                self.state = 113
                self.forstatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identlist(self):
            return self.getTypedRuleContext(OrkaParser.IdentlistContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput" ):
                listener.enterInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput" ):
                listener.exitInput(self)




    def input_(self):

        localctx = OrkaParser.InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(OrkaParser.T__10)
            self.state = 117
            self.identlist()
            self.state = 118
            self.match(OrkaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identlist(self):
            return self.getTypedRuleContext(OrkaParser.IdentlistContext,0)


        def const(self):
            return self.getTypedRuleContext(OrkaParser.ConstContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput" ):
                listener.enterOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput" ):
                listener.exitOutput(self)




    def output(self):

        localctx = OrkaParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_output)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(OrkaParser.T__12)
                self.state = 121
                self.identlist()
                self.state = 122
                self.match(OrkaParser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(OrkaParser.T__12)
                self.state = 125
                self.const()
                self.state = 126
                self.match(OrkaParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intnumb(self):
            return self.getTypedRuleContext(OrkaParser.IntnumbContext,0)


        def realnumb(self):
            return self.getTypedRuleContext(OrkaParser.RealnumbContext,0)


        def boolconst(self):
            return self.getTypedRuleContext(OrkaParser.BoolconstContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_const

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)




    def const(self):

        localctx = OrkaParser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_const)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.intnumb()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.realnumb()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.boolconst()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolconstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OrkaParser.RULE_boolconst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolconst" ):
                listener.enterBoolconst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolconst" ):
                listener.exitBoolconst(self)




    def boolconst(self):

        localctx = OrkaParser.BoolconstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_boolconst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntnumbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Numb(self):
            return self.getToken(OrkaParser.Numb, 0)

        def sign(self):
            return self.getTypedRuleContext(OrkaParser.SignContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_intnumb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntnumb" ):
                listener.enterIntnumb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntnumb" ):
                listener.exitIntnumb(self)




    def intnumb(self):

        localctx = OrkaParser.IntnumbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_intnumb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17 or _la==18:
                self.state = 137
                self.sign()


            self.state = 140
            self.match(OrkaParser.Numb)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RealnumbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Numb(self, i:int=None):
            if i is None:
                return self.getTokens(OrkaParser.Numb)
            else:
                return self.getToken(OrkaParser.Numb, i)

        def sign(self):
            return self.getTypedRuleContext(OrkaParser.SignContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_realnumb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRealnumb" ):
                listener.enterRealnumb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRealnumb" ):
                listener.exitRealnumb(self)




    def realnumb(self):

        localctx = OrkaParser.RealnumbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_realnumb)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 142
                self.sign()


            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                pass

            elif la_ == 2:
                self.state = 146
                self.match(OrkaParser.Numb)
                self.state = 147
                self.match(OrkaParser.T__15)
                self.state = 148
                self.match(OrkaParser.Numb)
                pass

            elif la_ == 3:
                self.state = 149
                self.match(OrkaParser.Numb)
                self.state = 150
                self.match(OrkaParser.T__15)
                pass

            elif la_ == 4:
                self.state = 151
                self.match(OrkaParser.T__15)
                self.state = 152
                self.match(OrkaParser.Numb)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OrkaParser.RULE_sign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSign" ):
                listener.enterSign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSign" ):
                listener.exitSign(self)




    def sign(self):

        localctx = OrkaParser.SignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_sign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not(_la==17 or _la==18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(OrkaParser.Ident, 0)

        def arithmexpr(self):
            return self.getTypedRuleContext(OrkaParser.ArithmexprContext,0)


        def boolconst(self):
            return self.getTypedRuleContext(OrkaParser.BoolconstContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = OrkaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(OrkaParser.Ident)
            self.state = 158
            self.match(OrkaParser.T__18)
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 16, 17, 18, 20, 21, 22, 23, 44, 45]:
                self.state = 159
                self.arithmexpr()
                pass
            elif token in [14, 15]:
                self.state = 160
                self.boolconst()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolexpr(self):
            return self.getTypedRuleContext(OrkaParser.BoolexprContext,0)


        def arithmexpr(self):
            return self.getTypedRuleContext(OrkaParser.ArithmexprContext,0)


        def getRuleIndex(self):
            return OrkaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = OrkaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_expression)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.boolexpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.arithmexpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrkaParser.TermContext)
            else:
                return self.getTypedRuleContext(OrkaParser.TermContext,i)


        def getRuleIndex(self):
            return OrkaParser.RULE_arithmexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmexpr" ):
                listener.enterArithmexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmexpr" ):
                listener.exitArithmexpr(self)




    def arithmexpr(self):

        localctx = OrkaParser.ArithmexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_arithmexpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.term()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17 or _la==18:
                self.state = 168
                _la = self._input.LA(1)
                if not(_la==17 or _la==18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 169
                self.term()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrkaParser.FactorContext)
            else:
                return self.getTypedRuleContext(OrkaParser.FactorContext,i)


        def getRuleIndex(self):
            return OrkaParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)
